# ai

./: .gitignore  README.md
bfl/: README.md  README_IMAGE_EDITING.md  bfl_kontext_editor.py  bfl_kontext_generator.py  gradio_kontext_app.py  requirements.txt
chat-engine/: .env.example  CHAT_APP_BRIEF.md  CHAT_SCHEMA.md  DECISIONS.md  PLAN_STATEFUL_AGENT.md  README.md  requirements.txt
dual-agent-chat/: .gitignore  ARCHITECTURE.md  PROJECT_STATUS.md  README.md  USAGE.md  app.json  config_loader.py  llm_client.py  main.py  message_manager.py  requirements.txt  view_conversation.py
faaltoo-chat/: .env.example  README.md  dev_commands.txt  quick_chat_system_design.md  requirements.txt  start_server.sh  user_dimensions.json
game-master/: .env.example  README.md  requirements.txt
gospel_embeddings/: .gitignore  README.md
hinglish-whisper/: .env.example  README.md  app.py  requirements.txt  transcribe.py
lipi/: PLAN.md  README.md  agent.py  cfg.py  config.py  config.yaml  harness.py  pyproject.toml  requirements.txt  test_context.py
lipi/.skills/code-review/: SKILL.md
lipi/context/: __init__.py  init_md.py  memory.py  packer.py  tokens.py
lipi/prompts/: system.md
lipi/skills/: __init__.py  registry.py
lipi/tools/: __init__.py
llama-server-multimodal/: GRADIO_README.md  README.md  gradio_tagger_app.py  (+1 more)
mcp/: .env  (+5 more)
video-subtitle-cruncher/: .gitignore  PLAN.md  README.md  pyproject.toml
video-subtitle-cruncher/cruncher/: cli.py  generate.py  manifest.py  pick.py  provider.py  screen.py  snapshot.py  timeline.py  transcript.py  web.py  webui.html
(+176 files in other folders)
