[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lipi"
version = "0.1.0"
description = "Local LLM agentic coding harness"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "tavily-python>=0.3.0",
    "duckdb>=0.10.0",
]

[project.scripts]
lipi = "harness:main"
